--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
+        "@tailwindcss/forms": "^0.5.2",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^0.21",
+        "bootstrap": "^5.2.3",
         "laravel-mix": "^6.0.6",
+        "laravel-vite-plugin": "^1.2.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.4.31",
+        "sass": "^1.56.1",
+        "tailwindcss": "^3.1.0",
+        "vite": "^6.1.0"
     }
 }
